<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/enter_normal"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="24dp" />

            <ImageButton
                android:id="@+id/btn_switchMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                tools:srcCompat="@drawable/ic_import_export_black_24dp" />
        </LinearLayout>


        <EditText
            android:id="@+id/latex_editText"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_weight=".3"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textMultiLine|text"
            android:paddingLeft="8dp"
            android:text="@string/sample_normal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="56dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="109dp">

            <Button
                android:id="@+id/btn_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/go"
                tools:layout_editor_absoluteX="272dp"
                tools:layout_editor_absoluteY="63dp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share" />

        </LinearLayout>

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="322dp"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="344dp"
            tools:layout_editor_absoluteY="170dp">

        </WebView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="temorary feature"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteY="189dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>